use namespace for evaluate parameter for concrete portlets